[gd_scene load_steps=3 format=2]

[ext_resource path="res://PetriVisual.gd" type="Script" id=1]
[ext_resource path="res://Edit_icon.png" type="Texture" id=2]

[node name="PetriVisual" type="Node2D"]
script = ExtResource( 1 )

[node name="Pos_pos" type="Position2D" parent="."]
position = Vector2( 58.3679, 63.9802 )

[node name="Trans_pos" type="Position2D" parent="."]
position = Vector2( 257.043, 63.9802 )

[node name="PetriContainer" type="Node2D" parent="."]

[node name="Editor" type="Node2D" parent="."]
position = Vector2( 858.459, 15.6343 )

[node name="NameInput" type="LineEdit" parent="Editor"]
margin_left = 50.0
margin_top = 22.0
margin_right = 148.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name Label" type="Label" parent="Editor"]
margin_left = 6.32883
margin_top = 29.7841
margin_right = 63.3288
margin_bottom = 46.7841
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcButton" type="Button" parent="Editor"]
margin_left = 7.0
margin_top = 68.0
margin_right = 146.0
margin_bottom = 88.0
text = "Create New Arc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosButton" type="Button" parent="Editor"]
margin_left = 7.0
margin_top = 105.0
margin_right = 145.0
margin_bottom = 125.0
text = "Create New Pos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransButton" type="Button" parent="Editor"]
margin_left = 7.0
margin_top = 142.0
margin_right = 144.0
margin_bottom = 162.0
text = "Create New Tran"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButt" type="Button" parent="Editor"]
margin_left = 7.0
margin_top = 266.0
margin_right = 141.0
margin_bottom = 286.0
text = "Save Agent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="Button" parent="Editor"]
margin_left = 16.0
margin_top = 309.0
margin_right = 130.0
margin_bottom = 343.0
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorLabel" type="Label" parent="Editor"]
margin_left = 24.9055
margin_top = 180.0
margin_right = 108.906
margin_bottom = 211.0
text = "Agent Color
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgentColor" type="ColorRect" parent="Editor"]
margin_left = 28.9055
margin_top = 204.0
margin_right = 68.9055
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="TextureButton" parent="Editor"]
margin_left = 79.9063
margin_top = 207.0
margin_right = 1103.91
margin_bottom = 1231.0
rect_scale = Vector2( 0.035, 0.035 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcPopup" type="WindowDialog" parent="."]
margin_left = 97.9444
margin_top = 117.055
margin_right = 353.944
margin_bottom = 314.055
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ArcPopup"]
margin_left = 9.55234
margin_top = 7.95038
margin_right = 136.552
margin_bottom = 36.9504
text = "Create New Arc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcScroll" type="OptionButton" parent="ArcPopup"]
margin_left = 11.0
margin_top = 30.0
margin_right = 238.0
margin_bottom = 50.0
text = "From Position to Transition"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ArcPopup"]
margin_left = 13.4546
margin_top = 61.4631
margin_right = 53.4546
margin_bottom = 75.4631
text = "From"

[node name="Label3" type="Label" parent="ArcPopup"]
margin_left = 134.925
margin_top = 62.7979
margin_right = 174.925
margin_bottom = 76.7979
text = "To"

[node name="FromScroll" type="OptionButton" parent="ArcPopup"]
margin_left = 10.5071
margin_top = 78.4022
margin_right = 116.507
margin_bottom = 98.4022
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToScroll" type="OptionButton" parent="ArcPopup"]
margin_left = 133.106
margin_top = 79.0674
margin_right = 236.106
margin_bottom = 99.0674

[node name="Label4" type="Label" parent="ArcPopup"]
margin_left = 13.4546
margin_top = 108.182
margin_right = 58.4546
margin_bottom = 122.182
text = "Weight"

[node name="WeightInput" type="LineEdit" parent="ArcPopup"]
margin_left = 11.4523
margin_top = 123.533
margin_right = 69.4523
margin_bottom = 147.533
text = "1"

[node name="CreateArcButt" type="Button" parent="ArcPopup"]
margin_left = 12.7551
margin_top = 158.418
margin_right = 101.755
margin_bottom = 178.418
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPopup" type="WindowDialog" parent="."]
margin_left = 302.0
margin_top = 35.0
margin_right = 668.0
margin_bottom = 571.0
rect_min_size = Vector2( 366, 536 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ColorPopup"]
margin_left = 26.0
margin_top = 47.0
margin_right = 334.0
margin_bottom = 459.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="Label" type="Label" parent="ColorPopup"]
margin_left = 30.0
margin_top = 18.0
margin_right = 150.0
margin_bottom = 36.0
text = "Agent Color Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSaveButton" type="Button" parent="ColorPopup"]
margin_left = 35.0
margin_top = 472.0
margin_right = 325.0
margin_bottom = 507.0
text = "Save Changes"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Editor/ArcButton" to="." method="_on_ArcButton_pressed"]
[connection signal="pressed" from="Editor/PosButton" to="." method="_on_PosButton_pressed"]
[connection signal="pressed" from="Editor/TransButton" to="." method="_on_TransButton_pressed"]
[connection signal="button_down" from="Editor/SaveButt" to="." method="_on_SaveButt_button_down"]
[connection signal="pressed" from="Editor/SaveButt" to="." method="_on_SaveButt_pressed"]
[connection signal="pressed" from="Editor/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="Editor/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="item_selected" from="ArcPopup/ArcScroll" to="." method="_on_ArcScroll_item_selected"]
[connection signal="toggled" from="ArcPopup/ArcScroll" to="." method="_on_ArcScroll_toggled"]
[connection signal="toggled" from="ArcPopup/FromScroll" to="." method="_on_FromScroll_toggled"]
[connection signal="pressed" from="ArcPopup/CreateArcButt" to="." method="_on_CreateArcButt_pressed"]
[connection signal="pressed" from="ColorPopup/ColorSaveButton" to="." method="_on_ColorSaveButton_pressed"]
